@@ -109,6 +109,7 @@ SEXP dtrMatrix_matrix_mm(SEXP a, SEXP b, SEXP right)
     return val;
 }
 
+#if 0				/* no longer used */
 SEXP dtrMatrix_as_dgeMatrix(SEXP from)
 {
     SEXP val = PROTECT(NEW_OBJECT(MAKE_CLASS("dgeMatrix")));
@@ -121,6 +122,7 @@ SEXP dtrMatrix_as_dgeMatrix(SEXP from)
     UNPROTECT(1);
     return val;
 }
+#endif
 
 SEXP dtrMatrix_as_matrix(SEXP from)
 {
